@@ -28,26 +28,6 @@ template <ScanPolicy default_scan=SCANNED,
           CollectionPolicy default_collect=AUTO>
 class Managed {
 public:
-    /** @brief Registers a pointer to be cleared when this object becomes
-      *        inaccessible.
-      */
-    template <typename T>
-    void clearOnceInaccessible(T **p_ptr) {
-        Core::general_register_disappearing_link(
-            reinterpret_cast<void **>(p_ptr), Core::base(this)
-        );
-    }
-
-    /** @brief Cancels the registration of a pointer, so it will not be
-      *        cleared when this object becomes inacessible.
-      */
-    template <typename T>
-    void cancelClearOnceInaccessible(T **p_ptr) {
-        Core::unregister_disappearing_link(
-            reinterpret_cast<void **>(p_ptr)
-        );
-    }
-
     void *operator new(std::size_t size,
                        ScanPolicy scan=default_scan,
                        CollectionPolicy collect=default_collect)
